force-app/main/default/objects/Credit_Note__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>if(
AND(
(Amount__c + Total_Adjustment_Amount__c) &lt; 1,
 From_LMS__c = false
), 
0, 
Amount__c + Total_Adjustment_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>