force-app/main/default/objects/Credit_Note__c/fields/Commission_Adjustment_Count__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment_Count__c</fullName>
    <label>Commission Adjustment Count</label>
    <summaryForeignKey>Commission_Adjustment__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>