force-app/main/default/objects/Credit_Note__c/fields/Commission_Payout__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout__c</fullName>
    <label>Commission Payout</label>
    <summarizedField>Commission_Adjustment__c.Amount__c</summarizedField>
    <summaryForeignKey>Commission_Adjustment__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>