force-app/main/default/objects/Credit_Note__c/fields/Do_Not_Apply_Account_Credit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Apply_Account_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, will not apply account credit when applying prepayments</inlineHelpText>
    <label>Do Not Apply Account Credit</label>
    <type>Checkbox</type>
</CustomField>