force-app/main/default/objects/Credit_Note__c/fields/Estimated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Commission__c</fullName>
    <label>Estimated Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>