force-app/main/default/objects/Credit_Note__c/fields/Full_CreditNoteId__c.field-meta.xml
<CustomField>
    <fullName>Full_CreditNoteId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full CreditNoteId</label>
    <type>Text</type>
</CustomField>