force-app/main/default/objects/Credit_Note__c/fields/Intacct_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_ID__c</fullName>
    <label>Intacct ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>