force-app/main/default/objects/Credit_Note__c/fields/Intacct_ID_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Intacct_ID_Lookup__c</fullName>
    <formula>if(not(isblank(Intacct_ID__c)), Intacct_ID__c,
if(not(isblank(Virtual_Parent__r.Intacct_ID__c)), Virtual_Parent__r.Intacct_ID__c,
if(not(isblank(Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c)), Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c,
if(not(isblank(Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c)), Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c,
if(not(isblank(Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c)), Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Virtual_Parent__r.Intacct_ID__c,

 &apos;VIRTUAL&apos;

)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct ID Lookup</label>
    <type>Text</type>
</CustomField>