force-app/main/default/objects/Credit_Note__c/fields/Non_Commissionable__c.field-meta.xml
<CustomField>
    <fullName>Non_Commissionable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates no commission to be paid out for credit note</inlineHelpText>
    <label>Non Commissionable</label>
    <type>Checkbox</type>
</CustomField>