force-app/main/default/objects/Credit_Note__c/fields/Note_Adjustment_Count__c.field-meta.xml
<CustomField>
    <fullName>Note_Adjustment_Count__c</fullName>
    <label>Note Adjustment Count</label>
    <summaryForeignKey>Credit_Note_Adjustment__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>