force-app/main/default/objects/Credit_Note__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>128</length>
    <type>Text</type>
</CustomField>