force-app/main/default/objects/Credit_Note__c/fields/Pending_Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Adjustment__c</fullName>
    <formula>if (Amount__c &gt; 0, (abs( Estimated_Commission__c / Amount__c ) *  Balance__c)- Commission_Payout__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Commission Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>