force-app/main/default/objects/Credit_Note__c/fields/Prepay_Note__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepay Note</label>
    <type>Checkbox</type>
</CustomField>