force-app/main/default/objects/Credit_Note__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(
NOT(ISBLANK( Source_Payment__r.Intacct_GL_No__c )), 
&quot;Can&apos;t delete this credit note!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>