force-app/main/default/objects/Credit_Note__c/fields/Source_Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Expense_Account__c</fullName>
    <label>Source Expense Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2008</fullName>
                <label>2008 - Refund Clearing</label>
            </value>
            <value>
                <fullName>2030</fullName>
                <label>2030 - HST</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>4000 - Revenue</label>
            </value>
            <value>
                <fullName>4005</fullName>
                <label>4005 - JHSC 1 Online</label>
            </value>
            <value>
                <fullName>4010</fullName>
                <label>4010 - IH JHSC Part I</label>
            </value>
            <value>
                <fullName>4011</fullName>
                <label>4011 - IH JHSC Part II</label>
            </value>
            <value>
                <fullName>4013</fullName>
                <label>4013 - IH Train-the-Trainer</label>
            </value>
            <value>
                <fullName>4015</fullName>
                <label>4015 - IH Other Training</label>
            </value>
            <value>
                <fullName>4017</fullName>
                <label>4017 - 3P JHSC Part I</label>
            </value>
            <value>
                <fullName>4018</fullName>
                <label>4018 - 3P JHSC Part II</label>
            </value>
            <value>
                <fullName>4020</fullName>
                <label>4020 - 3P Train-the-Trainer</label>
            </value>
            <value>
                <fullName>4022</fullName>
                <label>4022 - 3P Other Training</label>
            </value>
            <value>
                <fullName>4024</fullName>
                <label>4024 - On-Site Training</label>
            </value>
            <value>
                <fullName>4026</fullName>
                <label>4026 - Testing and Evaluations</label>
            </value>
            <value>
                <fullName>4028</fullName>
                <label>4028 - WSIB</label>
            </value>
            <value>
                <fullName>4030</fullName>
                <label>4030 - Other Consulting</label>
            </value>
            <value>
                <fullName>4032</fullName>
                <label>4032 - Contract</label>
            </value>
            <value>
                <fullName>4034</fullName>
                <label>4034 - Virtual Classroom Training</label>
            </value>
            <value>
                <fullName>4036</fullName>
                <label>4036 - Manual, Video &amp; Other Sales</label>
            </value>
            <value>
                <fullName>4038</fullName>
                <label>4038 - Green Books</label>
            </value>
            <value>
                <fullName>4040</fullName>
                <label>4040 - Participant Manuals</label>
            </value>
            <value>
                <fullName>4041</fullName>
                <label>4041 - EAD Sales</label>
            </value>
            <value>
                <fullName>4042</fullName>
                <label>4042 - Administrative Fees</label>
            </value>
            <value>
                <fullName>4044</fullName>
                <label>4044 - Shipping &amp; Handling Fees</label>
            </value>
            <value>
                <fullName>4062</fullName>
                <label>4062 - Safety Supplies</label>
            </value>
            <value>
                <fullName>4998</fullName>
                <label>4998 - Promotional Account Credits</label>
            </value>
            <value>
                <fullName>4999</fullName>
                <label>4999 - Bad Debt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>