force-app/main/default/objects/Credit_Note__c/fields/Source_Payment__c.field-meta.xml
<CustomField>
    <fullName>Source_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>