force-app/main/default/objects/Credit_Note__c/fields/Target_Order_Pending_Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Target_Order_Pending_Invoice_Balance__c</fullName>
    <formula>if(isblank(Target_Order__c), 0, Target_Order__r.Pending_Invoice_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Order Pending Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>