force-app/main/default/objects/Credit_Note__c/fields/Target_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>