force-app/main/default/objects/Credit_Note__c/fields/Target_Quote__c.field-meta.xml
<CustomField>
    <fullName>Target_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>