force-app/main/default/objects/Credit_Note__c/fields/Tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_rate__c</fullName>
    <label>Tax rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Tax</fullName>
                <default>true</default>
                <label>No Tax</label>
            </value>
            <value>
                <fullName>5% Canada Tax</fullName>
            </value>
            <value>
                <fullName>13% Ontario Tax</fullName>
            </value>
            <value>
                <fullName>15% HST Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>