force-app/main/default/objects/Credit_Note__c/fields/Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Amount__c</fullName>
    <label>Total Adjustment Amount</label>
    <summarizedField>Credit_Note_Adjustment__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Note_Adjustment__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>