force-app/main/default/objects/Credit_Note__c/fields/Usable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Usable_Balance__c</fullName>
    <formula>Balance__c - Target_Order_Pending_Invoice_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>