force-app/main/default/objects/Credit_Note__c/fields/Virtual_Parent__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual Parent</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>