force-app/main/default/objects/Credit_Note__c/validationRules/Cannot_Change_Target_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Target_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Target_Order__c ),
$UserRole.Name != &apos;System Admin&apos;,
$UserRole.Name != &apos;Accounting&apos;,
$UserRole.Name != &apos;Accounting and Operations Manager&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the target order! Contact accounting</errorMessage>
</ValidationRule>