force-app/main/default/objects/Credit_Note__c/validationRules/Note_Required_for_Expense_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Note_Required_for_Expense_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Source_Expense_Account__c, &apos;&apos;)),
ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorMessage>Notes required when source expense account is used</errorMessage>
</ValidationRule>