force-app/main/default/objects/Credit_Note__c/validationRules/Target_Order_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Order_Account_Match</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( Target_Order__c ),
 Target_Order__r.AccountId !=  Account__c 
)</errorConditionFormula>
    <errorMessage>The account on the order must match the account on the credit note!</errorMessage>
</ValidationRule>