force-app/main/default/objects/Credit_Note__c/validationRules/TotalTransactionTooBig.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalTransactionTooBig</fullName>
    <active>true</active>
    <errorConditionFormula>ABS(Total_Adjustment_Amount__c) &gt;  Amount__c</errorConditionFormula>
    <errorMessage>Total Transactions Can&apos;t Be Greater Than Amount</errorMessage>
</ValidationRule>