force-app/main/default/objects/Credit_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Balance__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes__c</columns>
    <columns>Tax_rate__c</columns>
    <columns>Virtual_Parent__c</columns>
    <columns>Source_Expense_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>